--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,4 @@
-.main {
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,15 +131,15 @@
 }
 
 /* Conic Gradient Animation */
-.thirteen::before {
+/* .thirteen::before {
   animation: 6s rotate linear infinite;
   width: 200%;
   height: 200%;
   background: var(--tile-border);
-}
+} */
 
 /* Inner Square */
-.thirteen::after {
+/* .thirteen::after {
   inset: 0;
   padding: 1px;
   border-radius: var(--border-radius);
@@ -149,10 +149,10 @@
     rgba(var(--tile-end-rgb), 1)
   );
   background-clip: content-box;
-}
+} */
 
 /* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
     border: 1px solid rgba(var(--card-border-rgb), 0.15);
@@ -171,10 +171,10 @@
   .card:hover span {
     transform: none;
   }
-}
+} */
 
 /* Mobile and Tablet */
-@media (max-width: 1023px) {
+/* @media (max-width: 1023px) {
   .content {
     padding: 4rem;
   }
@@ -268,4 +268,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
