--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.textarea-title:focus,
+.textarea-content:focus {
+  outline: none;
+}
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
