--- a/app/globals.css
+++ b/app/globals.css
@@ -34,7 +34,7 @@ aside::-webkit-scrollbar {
 }
 
 aside::-webkit-scrollbar-track {
-  background-color: #27272a; /* Customize the track color */
+  background-color: #18181b; /* Customize the track color */
 }
 
 aside::-webkit-scrollbar-thumb {
