--- a/app/globals.css
+++ b/app/globals.css
@@ -80,6 +80,21 @@ aside::-webkit-scrollbar-thumb:hover {
   text-decoration: underline;
 }
 
+/*spinner animation*/
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*spinner*/
+.my-spinner {
+  animation: spin 1s linear infinite;
+}
+
 /* :root {
   --max-width: 1100px;
   --border-radius: 12px;
